--- a/public/manifest.chrome.json
+++ b/public/manifest.chrome.json
@@ -3,13 +3,11 @@
   "name": "DFCraft - Deep Focus Timer",
   "version": "1.0.0",
   "description": "Craft your focus with Pomodoro timer, todos, and distraction blocking",
-
   "icons": {
     "16": "icons/icon-16.png",
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
   },
-
   "action": {
     "default_popup": "src/popup/popup.html",
     "default_title": "DFCraft",
@@ -19,20 +17,37 @@
       "128": "icons/icon-128.png"
     }
   },
-
   "background": {
     "service_worker": "background.js",
     "type": "module"
   },
-
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["content.js"]
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
   ],
-
-  "permissions": ["storage", "notifications", "alarms", "activeTab"],
-
+  "permissions": [
+    "storage",
+    "notifications",
+    "alarms",
+    "activeTab",
+    "tabs"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "staticPages/blocked.html"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
   "options_page": "src/options/options.html"
 }
